fixed text alignment

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -6,6 +6,7 @@ footer {
   height: 10vh;
   box-sizing: $border-box;
   justify-content: flex-start;
+  text-align: center;
   span {
     text-transform: uppercase;
   }
