--- a/sass/_generic.scss
+++ b/sass/_generic.scss
@@ -9,7 +9,6 @@ body {
   font: $base-font;
   background-color: black;
   color: $white;
-  text-align: center;
 }
 
 img {
